Switch to use new stack-utils CLI

--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -25,12 +25,10 @@ stack load
 #
 
 if snapctl is-connected hardware-observe; then
-    stack select --auto
-    stack download
+    stack use --auto --assume-yes
 elif lscpu -V &> /dev/null; then
     echo "Able to access hardware info without hardware-observe interface connection: assuming dev mode installation."
-    stack select --auto
-    stack download
+    stack use --auto --assume-yes
 else
     echo "hardware-observe interface not auto connected. Skip auto stack selection."
 fi
