--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -18,19 +18,17 @@ snapctl set http.host="127.0.0.1"
 # Set all stacks as snap config
 # 
 
-stack load
+$SNAP_NAME load
 
 #
 # Auto stack selection
 #
 
 if snapctl is-connected hardware-observe; then
-    stack select --auto
-    stack download
+    $SNAP_NAME use --auto --assume-yes
 elif lscpu -V &> /dev/null; then
     echo "Able to access hardware info without hardware-observe interface connection: assuming dev mode installation."
-    stack select --auto
-    stack download
+    $SNAP_NAME use --auto --assume-yes
 else
     echo "hardware-observe interface not auto connected. Skip auto stack selection."
 fi
